== Release 5.4.1.1 pre

    * Fixed: Reset the Pull-up resistors when you start a new program. Fix #222

== Release 5.4.1.0

    * Added "Microchip PIC12F1840 8-pin packages" (Sponsored by MGP, thank you very much.)

    * New:  Element  ODR: ONE DROP if RISING is the inversion
      of the element OSR: ONE-SHOT RISING,
                                _   _   _
                           --[_/ ODR \_/ ]--     ONE DROP if RISING
                                _     _
                           --[_/ OSR_/ \_]--     ONE-SHOT RISING

    * Rename: Element OSL: ONE-SHOT LOW LEVEL
      to new name     ODF: ONE DROP if FALLING
                              _     _   _
                           --[ \_ODF \_/ ]--     ONE DROP if FALLING
                              _       _
                           --[ \_OSF_/ \_]--     ONE-SHOT FALLING

    * Wiki: OSR, OSF, ODR, ODF, OSC
    https://github.com/LDmicro/LDmicro/wiki/OSR,-OSF,-ODR,-ODF,-OSC

    * Fixed error: 'true' undeclared (first use in this function). Issue BuildAVR.bat fixed #227
        while(true)   replaced at   while(1)

    * Fixed: BUS TRACER element.

    * Wiki: HOW TO: 7 segment display (7SEG & BUS)
    https://github.com/LDmicro/LDmicro/wiki/HOW-TO:-7-segment-display,-7SEG-&-BUS

    * Fix: WIP: SPI Atmel AVR-GCC for ATmega2560.


== Release 5.4.0.5

    * Refactor EEPROM RERSIST_ELEM for AVR

    * Fixed bug: LDmicro Forum - A problem with substracting 2 values #214
      ELEM_ADD & ELEM_SUB refactoring

    * Added "Atmel AVR ATmega1284 44-Pin packages"

    * Fixed PWM for AVR ATmega1284. Six PWM Channels are available.

    * Fixed AVR ATtiny85


== Release 5.4.0.4

    * Fixed the bug in ladder.h generated by version 5.4.0.x when compiling for AVR-GCC (double include).

    * PULSER instruction tested with ATmega2560 (both HEX->ASM and AVR-GCC compilers)
      PULSER instruction tested with PIC16F887 (both HEX->ASM and HI-TECH C compilers)