@@ -1,11 +1,11 @@
 #ifndef __LDMICRO_VER_H__
 #define __LDMICRO_VER_H__
 
-#define LDMICRO_VER_STR           "5.4.1.0"
+#define LDMICRO_VER_STR           "5.4.1.1"
 //   |     |
 #define LDMICRO_VER_MAJOR (5) // <-+     |
 #define LDMICRO_VER_MINOR (4) //         |
 #define LDMICRO_VER_PATCH (1) //         |
-#define LDMICRO_VER_TWEAK (0) // <-------+
+#define LDMICRO_VER_TWEAK (1) // <-------+
 
 #endif
